# nameLess

./: .gitignore  CMakeLists.txt  cscope.in.out  cscope.po.out
VIMConfig/: README.md  installVIMConfig.sh  prepareCTags.sh  prepareEmacsTags.sh  vimrc
app/: CMakeLists.txt
app/SRCounting/: CMakeLists.txt  SRCounter.cpp  SRCounter.h  main.cpp  plotSRGraph.sh  readme
app/StepCounting/: CMakeLists.txt  StepCounter.cpp  StepCounter.h  main.cpp  makeGraph.plt  plotSRGraph.sh
app/bmpAddHeader/: CMakeLists.txt  bmpAddHeader.cpp  bmpAddHeader.h  main.cpp
app/csv2json/: main.cpp
app/jwtSigner/: base64URLConver.h  jwtSigner.cpp  main.cpp
app/mediaPlayer/: CMakeLists.txt  main.cpp
app/mediaPlayer/Backend/: DashSegmentSelector.cpp  DashSegmentSelector.h  DirtyWriter.cpp  DirtyWriter.h  ErrorHandler.cpp  ErrorHandler.h  FileDownloader.cpp  FileDownloader.h  MPlayerManager.cpp  MPlayerManager.h  PlayerStatus.cpp  PlayerStatus.h  SegmentSelector.cpp  SegmentSelector.h  dashSegmentSelector.cpp  dashSegmentSelector.h  dirtyWriter.cpp  dirtyWriter.h  fileDownloader.cpp  fileDownloader.h  mplayerManager.cpp  mplayerManager.h  playerStatus.cpp  playerStatus.h  segmentSelector.cpp  segmentSelector.h
app/mediaPlayer/PlayerMsg/: PlayerMsg_Base.cpp  PlayerMsg_Base.h  PlayerMsg_Common.h  PlayerMsg_DownloadAudio.cpp  PlayerMsg_DownloadAudio.h  PlayerMsg_DownloadFile.cpp  PlayerMsg_DownloadFile.h  PlayerMsg_DownloadFinish.cpp  PlayerMsg_DownloadFinish.h  PlayerMsg_DownloadMPD.cpp  PlayerMsg_DownloadMPD.h  PlayerMsg_DownloadSubtitle.cpp  PlayerMsg_DownloadSubtitle.h  PlayerMsg_DownloadVideo.cpp  PlayerMsg_DownloadVideo.h  PlayerMsg_Dummy.cpp  PlayerMsg_Dummy.h  PlayerMsg_Factory.cpp  PlayerMsg_Factory.h  PlayerMsg_GetPlayerStage.cpp  PlayerMsg_GetPlayerStage.h  PlayerMsg_Open.cpp  PlayerMsg_Open.h  PlayerMsg_Pause.cpp  PlayerMsg_Pause.h  PlayerMsg_Play.cpp  PlayerMsg_Play.h  PlayerMsg_ProcessNextSegment.cpp  PlayerMsg_ProcessNextSegment.h  PlayerMsg_RefreshMPD.cpp  PlayerMsg_RefreshMPD.h  PlayerMsg_Stop.cpp  PlayerMsg_Stop.h  PlayerMsg_UpdateDownloadTime.cpp  PlayerMsg_UpdateDownloadTime.h
app/mediaPlayer/Util/: CmdReceiver.cpp  CmdReceiver.h  CountTimer.cpp  CriticalSection.cpp  CriticalSection.h  DefaultMutex.cpp  LinuxThread.cpp  LinuxThread.h  Logger.cpp  Logger.h  MsgCounter.cpp  MsgCounter.h  PlayerMsgQ.cpp  PlayerMsgQ.h  PlayerTimer.cpp  PlayerTimer.h  TrickScaleClock.cpp  TrickScaleClock.h  cmdReceiver.cpp  cmdReceiver.h  fileDownloader.cpp  fileDownloader.h  linuxThread.cpp  linuxThread.h  playerMsgQ.cpp  playerMsgQ.h  playerTimer.cpp  playerTimer.h
app/mediaPlayer/libdash/: CMakeLists.txt
app/mediaPlayer/libdash/include/: IDASHManager.h
app/mediaPlayer/libdash/source/manager/: DASHManager.cpp  DASHManager.h
app/mediaPlayer/libdash/source/mpd/: Timeline.cpp
app/mediaPlayer/libdash/source/xml/: DOMParser.cpp  DOMParser.h
app/png2bmp/: CMakeLists.txt  main.cpp  png2bmp.cpp  png2bmp.h
app/rangeTradingAnalyzer/: CMakeLists.txt  Counter.cpp  Counter.h  MPDistriCounter.cpp  MPDistriCounter.h  PDistriCounter.cpp  PDistriCounter.h  ResultPrinter.cpp  ResultPrinter.h  SRCounter.cpp  SRCounter.h  dataStruct.h  dbBuilder.cpp  dbBuilder.h  main.cpp  makeGraph.plt  plotMovePDistribution.sh  plotPriceDistribution.sh  plotSRGraph.sh
app/resizePNG/: CMakeLists.txt  main.cpp  resizePNG.cpp  resizePNG.h
app/testSmartPointer/: CMakeLists.txt  DefaultMutex.h  SSMsgQ.cpp  SSMsgQ.h  SmartPointer.cpp  main.cpp
app/tradeDataAnalyzer/: CMakeLists.txt  app.h  common.cpp  common.h  dataStruct.h  main.cpp  makeMvClose.sh  makePDF.sh  movingClose.cpp  movingClose.h  pdfBuilder.cpp  pdfBuilder.h
csv2json/: CMakeLists.txt  jsonLangDB.csv
example/: CMakeLists.txt
example/MSecTimer/: CMakeLists.txt  main.cpp
example/defArrayFromFile/: CMakeLists.txt  key.h  main.cpp
example/googleProtobuf_read/: CMakeLists.txt  addressbook.pb.cc
example/googleProtobuf_write/: CMakeLists.txt  genProtobuf.sh  main.cpp
example/hiden_c_struct/: CMakeLists.txt  main.cpp
example/inheritance_C/: CMakeLists.txt  allFood.h  food.h  main.c
example/learnXML2/: CMakeLists.txt  main.cpp
example/learnXML2_C/: CMakeLists.txt  main.c
example/multicastArbitrator/: CMakeLists.txt  main.cpp
example/multicastReceiver/: CMakeLists.txt  main.cpp
example/multicastSender/: CMakeLists.txt  main.cpp
example/tcpClient/: CMakeLists.txt  main.cpp
example/tcpServer/: CMakeLists.txt  main.cpp
example/tryNLTime/: CMakeLists.txt  main.cpp
example/tryNLTime_C/: CMakeLists.txt  main.cpp
example/udpClient/: CMakeLists.txt  main.cpp
example/udpServer/: CMakeLists.txt  main.cpp
json2csv/: CMakeLists.txt  LanguageLearning.json  main.cpp
jwtLearn/: CMakeLists.txt
jwtLearn/HS256Signer/: CMakeLists.txt
jwtLearn/HS256Validator/: CMakeLists.txt
jwtLearn/RS256SignAndValidate/: CMakeLists.txt  main.cpp
jwtLearn/errorHandle/: CMakeLists.txt
jwtLearn/factoryExample/: CMakeLists.txt
jwtRemake/: CMakeLists.txt  base64Conver.h  base64Convert.cpp  jwtRemake.cpp  jwtRemake.h  main.cpp
jwtSigner/: CMakeLists.txt  base64URLConver.cpp  jwtSigner.h
lib/: CMakeLists.txt
lib/network/: TCPCast.cpp  UDPCast.cpp
lib/network_c/: MultiCast_C.c  TCPCast_C.c  UDPCast_C.c  UDPCast_C.h
lib/nl_time/: CMakeLists.txt
lib/utility/: CMakeLists.txt  ClassWithThread.cpp  ClassWithThread.h  CountTimer.h  CriticalSection.cpp  DailyTimer.cpp  DailyTimer.h  DefaultMutex.cpp  DefaultMutex.h  InputParser.cpp  InputParser.h  LinuxCond.cpp  LinuxCond.h  Logger.cpp  Logger.h  MSecTimer.cpp  MSecTimer.h  NLTime.cpp  NLTime.h  NLTimeUTC.cpp  NLTimeUTC.h  SafeData.h  SafeString.cpp  SafeString.h  Tools.cpp  (+2 more)
multicastReceiver/: CMakeLists.txt  main.cpp
multicastSender/: main.cpp
network/: CMakeLists.txt  MCastArbitrator.cpp  MCastArbitrator.h  MultiCast.cpp  MultiCast.h  TCPCast.cpp  TCPCast.h  UDPCast.cpp  UDPCast.h  multicast.cpp  multicast.h
selfCertificate/: default-ssl.conf  genKeys.sh
tcpClient/: main.cpp
tcpServer/: CMakeLists.txt
utility/: CMakeLists.txt  DefaultMutex.cpp  Logger.h  Tools.cpp  tools.cpp  tools.h
(+90 files in other folders)
