add_subdirectory(multicastReceiver)
add_subdirectory(multicastSender)
add_subdirectory(tcpClient)
add_subdirectory(tcpServer)
add_subdirectory(udpClient)
add_subdirectory(udpServer)
add_subdirectory(multicastArbitrator)
add_subdirectory(hiden_c_struct)
add_subdirectory(defArrayFromFile)
add_subdirectory(inheritance_C)
add_subdirectory(googleProtobuf_write)
add_subdirectory(googleProtobuf_read)
add_subdirectory(tryNLTime)
add_subdirectory(MSecTimer)
add_subdirectory(tryNLTime_C)
add_subdirectory(learnXML2_C)
add_subdirectory(learnXML2)
